--- a/view/frontend/templates/cadence/pinterest/visitor.phtml
+++ b/view/frontend/templates/cadence/pinterest/visitor.phtml
@@ -1,23 +1,19 @@
 <?php
-/** @var Cadence\Pinterest\Block\AbstractBlock $block */
+/** @var \Cadence\Pinterest\Helper\Data $helper */
 $helper = $block->getHelper();
 if (!$helper->isVisitorPixelEnabled()) {
-	return;
+    return;
 }
-$id = $helper->getVisitorPixelId();
+$id = $helper->getTagId();
 ?>
-<!-- Facebook Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-        n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-        document,'script','//connect.facebook.net/en_US/fbevents.js');
-
-    fbq('init', '<?php echo $id ?>');
-    fbq('track', "PageView");
+<!-- Pinterest Tag Base Code -->
+<script type="text/javascript">
+!function(e){if(!window.pintrk){window.pintrk=function(){window.pintrk.queue.push(Array.prototype.slice.call(arguments))};var n=window.pintrk;n.queue=[],n.version="3.0";var t=document.createElement("script");t.async=!0,t.src=e;var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(t,r)}}("https://s.pinimg.com/ct/core.js");
+pintrk('load', '<?php echo $id ?>');
+pintrk('page');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-               src="https://www.facebook.com/tr?id=<?php echo $id ?>&ev=PageView&noscript=1"
-    /></noscript>
-<!-- End Facebook Pixel Code -->
+<noscript>
+<img height="1" width="1" style="display:none;" alt=""
+src="https://ct.pinterest.com/v3/?tid=<?php echo $id ?>&noscript=1" />
+</noscript>
+<!-- End Pinterest Tag Base Code -->
