--- a/view/frontend/templates/cadence/pinterest/events.phtml
+++ b/view/frontend/templates/cadence/pinterest/events.phtml
@@ -2,23 +2,6 @@
 /** @var Cadence\Pinterest\Block\AbstractBlock $block */
 $helper = $block->getHelper();
 $session = $block->getSession();
-$id = $helper->getVisitorPixelId();
-?>
-
-<?php /*if ($helper->isAddToCartPixelEnabled() && $session->hasAddToCart()) : ?>
-	<?php echo $helper->getPixelHtml('AddToCart', $session->getAddToCart()); ?>
-<?php endif;
- AddToCart Handled by FPC
- */ ?>
-<?php if ($helper->isAddToWishlistPixelEnabled() && $session->hasAddToWishlist()): ?>
-	<?php echo $helper->getPixelHtml('AddToWishlist', $session->getAddToWishlist()); ?>
-<?php endif; ?>
-<?php if ($helper->isInitiateCheckoutPixelEnabled() && $session->hasInitiateCheckout()): ?>
-	<?php echo $helper->getPixelHtml('InitiateCheckout'); ?>
-<?php endif; ?>
-<?php if ($helper->isViewProductPixelEnabled() && $session->hasViewProduct()): ?>
-	<?php echo $helper->getPixelHtml('ViewContent', $session->getViewProduct()); ?>
-<?php endif; ?>
-<?php if ($helper->isSearchPixelEnabled() && $session->hasSearch()): ?>
-	<?php echo $helper->getPixelHtml('Search', $session->getSearch()); ?>
-<?php endif; ?>
+if ($helper->isAddToCartPixelEnabled() && $session->hasAddToCart()) {
+    echo $helper->getPixelHtml('AddToCart', $session->getAddToCart());
+}
